Small design fixes and fix for large gap after page-content

--- a/_sass/_page-sections.scss
+++ b/_sass/_page-sections.scss
@@ -4,7 +4,7 @@
   top: 0;
   left: 0;
   height: 400px;
-  background: $brand-primary;
+  background: $brand-dark;
   @include background-cover();
 }
 
@@ -64,30 +64,30 @@
     }
   }
 
-  &.page-header {
-
-    color: white;
-    justify-content: center;
-    padding-bottom: 400px;
-    margin-bottom: -450px;
-
-    .block {
-      max-width: 700px !important;
-    }
-  }
-
   &.page-content {
 
-    justify-content: center;
+    padding-bottom: 0;
+
+    +.bg-white {
+      padding-top: 30px;
+    }
 
     .block {
       max-width: 800px !important;
-      text-align: left !important;
+
+      h1 {
+        color: $brand-white;
+        padding: 0 1rem;
+        margin-bottom: 2rem;
+      }
+
       .content {
-        padding: 60px 60px 0;
+        padding: 60px;
         background: $brand-white;
         width: 100%;
         border-radius: $border-radius;
+        text-align: left;
+
         blockquote p {
           border-left: 3px solid $brand-primary;
           padding: 0 20px;
